better web design

--- a/scp/entries/index.html
+++ b/scp/entries/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <h1>SCP Entries Index</h1>
-    <p>Last updated: 2024-10-18 13:07:50</p>
+    <p>Last updated: 2024-10-18 14:12:09</p>
     <ul>
-        <li><a href="SCP-001.txt">SCP-00</a></li><li><a href="SCP-123.txt">SCP-12</a></li><li><a href="SCP-263.txt">SCP-26</a></li><li><a href="SCP-312.txt">SCP-31</a></li><li><a href="SCP-495.txt">SCP-49</a></li><li><a href="SCP-5323.txt">SCP-532</a></li><li><a href="SCP-5324.txt">SCP-532</a></li><li><a href="SCP-902.txt">SCP-90</a></li><li><a href="review.txt">revie</a></li>
+        <li><a href="SCP-6666.txt">SCP-6666</a></li><li><a href="SCP-673.txt">SCP-673</a></li>
     </ul>
 </body>
 </html>
