--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
 <body>
     <div class="container">
         <h1>SCP Generator</h1>
-        <p>Welcome to the SCP Generator, powered by the <a href="https://dottxt.co">.txt API</a>. This tool creates unique SCP (Secure, Contain, Protect) entries using advanced language models.</p>
+        <p>Welcome to the <a href="https://scp-wiki.wikidot.com/"></a>SCP Generator</a>, powered by the <a href="https://dottxt.co">.txt API</a>. A new entry is created every day.</p>
+        <p>Special thanks to the <a href="https://scp-wiki.wikidot.com/authors-pages">SCP contributors</a> over many years for all their hard work, creativity, and passion in creating the SCP Wiki.</p>
         <h2>Resources:</h2>
         <ul>
-            <li><a href="scp/entries/index.html">View Generated SCP Entries</a></li>
-            <li><a href="https://github.com/dottxt-ai/cursed">GitHub Repository</a></li>
+            <li><a href="scp/entries/index.html">Entries</a></li>
+            <li><a href="https://github.com/dottxt-ai/cursed">GitHub</a></li>
+            <li><a href="https://dottxt.co">.txt</a></li>
         </ul>
     </div>
 </body>
