generally better website

--- a/scp/entries/index.html
+++ b/scp/entries/index.html
@@ -4,21 +4,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCP Entries Index</title>
+    <title>SCP Foundation - Secure, Contain, Protect</title>
     <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; padding: 20px; }
-        h1 { color: #333; }
-        ul { list-style-type: none; padding: 0; }
-        li { margin-bottom: 10px; }
-        a { color: #0066cc; text-decoration: none; }
-        a:hover { text-decoration: underline; }
+        body {
+            font-family: 'Courier New', monospace;
+            line-height: 1.6;
+            padding: 20px;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #990000;
+            text-align: center;
+            border-bottom: 2px solid #990000;
+            padding-bottom: 10px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border-left: 3px solid #990000;
+        }
+        a {
+            color: #990000;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .update-info {
+            text-align: right;
+            font-style: italic;
+            margin-top: 20px;
+            color: #666;
+        }
     </style>
 </head>
 <body>
-    <h1>SCP Entries Index</h1>
-    <p>Last updated: 2024-10-18 14:12:09</p>
-    <ul>
-        <li><a href="SCP-6666.txt">SCP-6666</a></li><li><a href="SCP-673.txt">SCP-673</a></li>
-    </ul>
+    <div class="container">
+        <h1>SCP Foundation Archives</h1>
+        <ul>
+            <li><a href="SCP-4977.html">SCP-4977</a></li><li><a href="SCP-5960.html">SCP-5960</a></li>
+        </ul>
+        <p class="update-info">Last updated: 2024-10-18 14:55:09</p>
+    </div>
 </body>
 </html>
