add call for improvements

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="container">
         <h1>SCP Generator</h1>
         <p>Welcome to the <a href="https://scp-wiki.wikidot.com/"></a>SCP Generator</a>, powered by the <a href="https://dottxt.co">.txt API</a>. A new entry is created every day.</p>
+        <p>Quality may vary. Please submit your ideas for improvement <a href="https://github.com/dottxt-ai/cursed">here</a>.</p>
         <p>Special thanks to the <a href="https://scp-wiki.wikidot.com/authors-pages">SCP contributors</a> over many years for all their hard work, creativity, and passion in creating the SCP Wiki.</p>
         <h2>Resources:</h2>
         <ul>
