make index more fun

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCP Generator - Powered by .txt</title>
+    <title>cursed - powered by .txt</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,16 +31,21 @@
 </head>
 <body>
     <div class="container">
-        <h1>SCP Generator</h1>
-        <p>Welcome to the <a href="https://scp-wiki.wikidot.com/"></a>SCP Generator</a>, powered by the <a href="https://dottxt.co">.txt API</a>. A new entry is created every day.</p>
-        <p>Quality may vary. Please submit your ideas for improvement <a href="https://github.com/dottxt-ai/cursed">here</a>.</p>
-        <p>Special thanks to the <a href="https://scp-wiki.wikidot.com/authors-pages">SCP contributors</a> over many years for all their hard work, creativity, and passion in creating the SCP Wiki.</p>
-        <h2>Resources:</h2>
-        <ul>
-            <li><a href="scp/entries/index.html">Entries</a></li>
+        <h1>cursed</h1>
+        <p>Welcome to <a href="https://dottxt.co">.txt</a> project for <a href="https://github.com/dottxt-ai/cursed">cursed</a>.</p>
 
-            <li><a href="https://github.com/dottxt-ai/cursed">GitHub</a></li>
-            <li><a href="https://dottxt.co">.txt</a></li>
+        <p>Cursed code is code that is creative, unexpected, foolish,
+        or otherwise intended simply for play.
+        Language models and structured text are so incredibly
+        new that we haven't really begun to play with these boundaries.</p>
+
+        <p>This website hosts various experiments in code and language models.</p>
+
+        <p>Please join our <a href="https://discord.gg/ErZ8XnCmkQ">Discord</a> to suggest ideas for cursed code.</p>
+
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="scp/index.html">SCP</a></li>
         </ul>
     </div>
 </body>
