add creative commons license

--- a/scp/index.html
+++ b/scp/index.html
@@ -74,7 +74,13 @@
             <li>Our company, <a href="https://dottxt.co">.txt</a></li>
             <li>Our <a href="https://discord.gg/ErZ8XnCmkQ">Discord</a></li>
         </ul>
+        <hr>
+        <p>
+            This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank" rel="license noopener noreferrer">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+        </p>
     </div>
+    <footer>
+    </footer>
 </body>
 
 </html>
